--- a/glade/main_window.glade
+++ b/glade/main_window.glade
@@ -96,6 +96,8 @@
             <property name="receives_default">False</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
+            <property name="group">radio_minimize</property>
+            <signal name="toggled" handler="on_radio_button_toggled" swapped="no"/>
           </object>
           <packing>
             <property name="x">151</property>
@@ -114,6 +116,7 @@
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
             <property name="group">radio_maximize</property>
+            <signal name="toggled" handler="on_radio_button_toggled" swapped="no"/>
           </object>
           <packing>
             <property name="x">259</property>
