--- a/glade/main_window.glade
+++ b/glade/main_window.glade
@@ -268,6 +268,7 @@ y solución del problema.
             <property name="receives_default">False</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
+            <signal name="toggled" handler="on_check_button_toggled" swapped="no"/>
           </object>
           <packing>
             <property name="x">127</property>
